# bangladeshi-homestay

./: .env.example  .gitignore  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy-github-pages.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: admin.py  admin_bookings.py  admin_hosts.py  admin_routes.py  database.py  email.py  invoices.py  main.py  migrations.py  settings.py
backend/app/bookings/: availability.py  hosts.py  models.py  pricing.py  routes.py  schemas.py  spam.py
backend/app/payments/: models.py  pdf.py  routes.py  swiss_qr.py
backend/scripts/: upgrade_db.py
backend/tests/: test_payments.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/scripts/: verify-static-export.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  I18nProvider.tsx  SectionReveal.tsx
frontend/src/lib/: admin-api.ts  api.ts  contact.ts  email.ts  hosts.ts  i18n-context.ts  i18n-data.ts  i18n.ts  paths.ts  site-copy.ts  useI18n.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/booking/: page.tsx
src/app/contact/: page.tsx
src/app/faq/: page.tsx
src/app/hosts/: page.tsx
src/app/how-it-works/: page.tsx
src/app/privacy/: page.tsx
src/app/terms/: page.tsx
src/components/: Footer.tsx  I18nProvider.tsx  Navigation.tsx  RevealScript.tsx  SectionReveal.tsx
src/components/home/: About.tsx  Band.tsx  (+11 more)
src/lib/: email.ts  i18n-context.ts  i18n-data.ts  i18n.tsx  paths.ts  site-copy.ts
(+22 files in other folders)
