[project]
name = "bangladeshi-homestay-backend"
version = "0.1.0"
description = "FastAPI backend for Bangladeshi homestay booking and Swiss QR invoices"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "qrcode[pil]>=8.2",
    "reportlab>=5.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]
